--- a/src/pages/Pay.html
+++ b/src/pages/Pay.html
@@ -62,12 +62,15 @@
             <label for="ticket-type">Ticket Type</label>
             <select id="ticket-type" name="ticket_type" required>
                 <option value="">-- Select a Ticket Type --</option>
-                <option value="adult">Adult - $20</option>
-                <option value="child">Child - $10</option>
+                <option value="adult">Adult</option>
+                <option value="child">Child</option>
             </select>
 
             <label for="ticket-quantity">Quantity</label>
             <input type="number" id="ticket-quantity" name="ticket_quantity" min="1" required>
+
+            <label for="activation-date">Activation Date</label>
+            <input type="month" id="Activation-date" name="Activation_date" required>
 
             <label for="card-number">Card Number</label>
             <input type="text" id="card-number" name="card_number" maxlength="16" placeholder="1234 5678 9012 3456" required>
